--- a/assets/css/src/_petOfTheWeek.css
+++ b/assets/css/src/_petOfTheWeek.css
@@ -6,7 +6,7 @@
 grid-template-columns: 1fr;
 text-align: left;
 		& button {
-			background: #607D8A;
+			background: rgb(48, 58, 63);
 		}
 		& h3 {
 			font-size: 1.2rem;
